--- a/mox/src/main/res/layout/item_mock.xml
+++ b/mox/src/main/res/layout/item_mock.xml
@@ -2,26 +2,75 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="16dp">
 
     <TextView
         android:id="@+id/tvName"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:text="mock_gage_asgaega"
+        android:textColor="@color/manhole_pure_black"
+        android:textSize="15sp" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="26dp"
+        android:layout_marginTop="5dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tvMethod"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@drawable/manhole_left_circle_get"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:text="GET"
+            android:gravity="center"
+            android:textColor="@color/manhole_white"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tvPath"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@drawable/manhole_right_circle_stroke_get"
+            android:gravity="center_vertical"
+            android:textSize="14sp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:text="/gageag/eagge"
+            android:textColor="@color/manhole_pure_black" />
+        <View
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <Switch
+            android:id="@+id/switchMock"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
 
     <TextView
+        android:id="@+id/tvTitle"
+        android:layout_marginTop="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="哈哈哈"
+        android:textColor="@color/manhole_pure_black"
+        android:textSize="13sp" />
+    <TextView
+        android:layout_marginTop="5dp"
         android:id="@+id/tvDesc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <TextView
-        android:id="@+id/tvMethod"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <TextView
-        android:id="@+id/tvPath"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:textColor="@color/manhole_99"
+        android:textSize="12sp"
+        android:maxLines="3"
+        android:ellipsize="end"
+        android:text="hoghagheia\n横哦啊横车哈工程\nhogahgeiagbobogagehgaoheigagoi\nhoghaeigaehgieahgeaoigh"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
