--- a/mox/src/main/res/layout/layout_monitor.xml
+++ b/mox/src/main/res/layout/layout_monitor.xml
@@ -96,6 +96,7 @@
 
         <ViewStub
             android:id="@+id/vbSetting"
+            android:layout="@layout/stub_setting"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
