--- a/mox/src/main/res/layout/layout_monitor.xml
+++ b/mox/src/main/res/layout/layout_monitor.xml
@@ -44,61 +44,22 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
-            android:id="@+id/llMock"
+        <com.example.mox.ui.MockListLayout
+            android:id="@+id/ll_mock"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rvMock"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tvFlow"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="20dp"
-                    android:paddingTop="10dp"
-                    android:paddingRight="20dp"
-                    android:paddingBottom="10dp"
-                    android:text="FLOW" />
-
-                <TextView
-                    android:id="@+id/tvCase"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="20dp"
-                    android:paddingTop="10dp"
-                    android:paddingRight="20dp"
-                    android:paddingBottom="10dp"
-                    android:text="CASE" />
-
-                <TextView
-                    android:id="@+id/tvMock"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="20dp"
-                    android:paddingTop="10dp"
-                    android:paddingRight="20dp"
-                    android:paddingBottom="10dp"
-                    android:text="MOCK" />
-
-            </LinearLayout>
-        </LinearLayout>
+            android:layout_height="match_parent"/>
 
         <ViewStub
             android:id="@+id/vbSetting"
             android:layout="@layout/stub_setting"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
+        <com.example.mox.ui.MockView
+            android:id="@+id/v_mock"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
     </FrameLayout>
 
