--- a/mox/src/main/res/layout/layout_mock.xml
+++ b/mox/src/main/res/layout/layout_mock.xml
@@ -120,4 +120,17 @@
 
     </LinearLayout>
 
+    <View
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@color/manhole_99"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"/>
+
+
+    <com.freesith.jsonvision.JsonVisionView
+        android:id="@+id/v_json"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 </LinearLayout>
