--- a/manhole/src/main/res/layout/layout_mock_list.xml
+++ b/manhole/src/main/res/layout/layout_mock_list.xml
@@ -11,19 +11,31 @@
         android:layout_weight="1" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:background="@color/manhole_99"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tvFlow"
+            android:background="@color/manhole_white"
+            android:id="@+id/tvEnable"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="20dp"
             android:paddingTop="10dp"
             android:paddingRight="20dp"
             android:paddingBottom="10dp"
-            android:text="FLOW" />
+            android:text="启用的" />
+
+        <TextView
+            android:id="@+id/tvMock"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="20dp"
+            android:paddingTop="10dp"
+            android:paddingRight="20dp"
+            android:paddingBottom="10dp"
+            android:text="MOCK" />
 
         <TextView
             android:id="@+id/tvCase"
@@ -35,15 +47,16 @@
             android:paddingBottom="10dp"
             android:text="CASE" />
 
+
         <TextView
-            android:id="@+id/tvMock"
+            android:id="@+id/tvFlow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="20dp"
             android:paddingTop="10dp"
             android:paddingRight="20dp"
             android:paddingBottom="10dp"
-            android:text="MOCK" />
+            android:text="FLOW" />
 
     </LinearLayout>
 </LinearLayout>
