--- a/manhole/src/main/res/layout/layout_monitor.xml
+++ b/manhole/src/main/res/layout/layout_monitor.xml
@@ -12,6 +12,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:background="@color/manhole_white"
             android:id="@+id/tabMock"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
