--- a/manhole/src/main/res/layout/layout_mock.xml
+++ b/manhole/src/main/res/layout/layout_mock.xml
@@ -3,65 +3,82 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/manhole_white"
-    android:orientation="vertical"
-    android:padding="16dp">
-
-    <TextView
-        android:id="@+id/tvClose"
-        android:layout_gravity="right"
-        android:text="╳"
-        android:textSize="20sp"
-        android:padding="10dp"
-        android:textStyle="bold"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-
-    <TextView
-        android:id="@+id/tvName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="mock_gage_asgaega"
-        android:textColor="@color/manhole_pure_black"
-        android:textSize="15sp" />
+    android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="26dp"
-        android:layout_marginTop="5dp"
-        android:gravity="center_vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tvMethod"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:background="@drawable/manhole_left_circle_get"
-            android:gravity="center"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:text="GET"
-            android:textColor="@color/manhole_white"
-            android:textStyle="bold" />
+        <LinearLayout
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tvName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="mock_gage_asgaega"
+                android:textStyle="bold"
+                android:textColor="@color/manhole_pure_black"
+                android:textSize="18sp" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="26dp"
+                android:layout_marginTop="5dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tvMethod"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/manhole_left_circle_get"
+                    android:gravity="center"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:text="GET"
+                    android:textColor="@color/manhole_white"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tvPath"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/manhole_right_circle_stroke_get"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:textColor="@color/manhole_pure_black"
+                    android:textSize="14sp" />
+
+                <View
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
 
         <TextView
-            android:id="@+id/tvPath"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:background="@drawable/manhole_right_circle_stroke_get"
-            android:gravity="center_vertical"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:text="/gageag/eagge"
-            android:textColor="@color/manhole_pure_black"
-            android:textSize="14sp" />
-
-        <View
+            android:id="@+id/tvClose"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:padding="16dp"
+            android:text="╳"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
 
     </LinearLayout>
+
 
     <TextView
         android:id="@+id/tvTitle"
@@ -69,10 +86,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:text="哈哈哈"
+        android:textStyle="bold"
+        android:layout_marginLeft="16dp"
         android:textColor="@color/manhole_pure_black"
-        android:textSize="13sp" />
+        android:textSize="18sp" />
 
     <TextView
+        android:layout_marginLeft="16dp"
         android:id="@+id/tvDesc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -80,68 +100,48 @@
         android:ellipsize="end"
         android:text="hoghagheia\n横哦啊横车哈工程\nhogahgeiagbobogagehgaoheigagoi\nhoghaeigaehgieahgeaoigh"
         android:textColor="@color/manhole_99"
-        android:textSize="12sp" />
+        android:textSize="15sp" />
 
 
     <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:background="@color/manhole_99"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"/>
+        android:background="@color/manhole_99" />
 
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:layout_marginLeft="18dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <TextView
-            android:text="host:"
             android:layout_width="60dp"
-            android:layout_height="wrap_content"/>
+            android:textSize="15sp"
+            android:textColor="@color/manhole_black"
+            android:layout_height="wrap_content"
+            android:text="host:" />
 
         <TextView
             android:id="@+id/tvHost"
+            android:textSize="15sp"
+            android:textColor="@color/manhole_black"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-    </LinearLayout>
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-
-        <TextView
-            android:text="query:"
-            android:layout_width="60dp"
-            android:layout_height="wrap_content"/>
-
-        <TextView
-            android:id="@+id/tvQuery"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
     <View
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="@color/manhole_99"
         android:layout_width="match_parent"
-        android:layout_height="1dp"/>
+        android:layout_height="1dp"
+        android:layout_marginTop="10dp"
+        android:background="@color/manhole_99" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvChoice"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
-
-<!--    <com.freesith.jsonvision.JsonVisionView-->
-<!--        android:id="@+id/v_json"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"/>-->
+        android:layout_height="match_parent" />
 
 </LinearLayout>
