--- a/manhole/src/main/res/layout/item_mock.xml
+++ b/manhole/src/main/res/layout/item_mock.xml
@@ -48,6 +48,7 @@
             android:layout_height="wrap_content"/>
 
         <Switch
+            android:visibility="gone"
             android:id="@+id/switchMock"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
