--- a/app_moxy/src/main/res/layout/activity_main.xml
+++ b/app_moxy/src/main/res/layout/activity_main.xml
@@ -6,12 +6,14 @@
 
 
     <Button
+        android:visibility="gone"
         android:id="@+id/button"
         android:text="航航行行或"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
     <ScrollView
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -59,5 +61,10 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <com.freesith.jsonview.JsonView
+        android:id="@+id/jsonView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
