add: 添加历史记录

--- a/manhole/src/main/res/layout/layout_cover.xml
+++ b/manhole/src/main/res/layout/layout_cover.xml
@@ -4,6 +4,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <com.freesith.manhole.history.HistoryShortcut
+        android:id="@+id/vHistoryShortcut"
+        android:layout_gravity="right"
+        android:layout_width="150dp"
+        android:layout_height="300dp"/>
+
     <com.freesith.manhole.ui.MonitorView
         android:id="@+id/vMonitor"
         android:visibility="gone"
