--- a/jsonview/src/main/res/layout/layout_json_view.xml
+++ b/jsonview/src/main/res/layout/layout_json_view.xml
@@ -16,6 +16,7 @@
 
     <com.freesith.jsonview.JsonPointerView
         android:id="@+id/json_pointer"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
