--- a/manhole/src/main/res/layout/layout_history.xml
+++ b/manhole/src/main/res/layout/layout_history.xml
@@ -1,36 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rvHistory"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvHistory"
-        android:layout_weight="3"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"/>
-
-    <HorizontalScrollView
-        android:layout_weight="5"
-        android:layout_width="0dp"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent">
-
-            <androidx.core.widget.NestedScrollView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <com.freesith.jsonview.JsonView
-                    android:id="@+id/v_json"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
-
-            </androidx.core.widget.NestedScrollView>
-        </LinearLayout>
-    </HorizontalScrollView>
-
-</LinearLayout>
+    android:layout_height="match_parent" />
