--- a/app_moxy/src/main/res/layout/activity_main.xml
+++ b/app_moxy/src/main/res/layout/activity_main.xml
@@ -7,7 +7,8 @@
 
     <Button
         android:id="@+id/button"
-        android:text="航航行行或"
+        android:text="Setting"
+        android:layout_gravity="right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
