--- a/manhole/src/main/res/layout/item_history_shortcut.xml
+++ b/manhole/src/main/res/layout/item_history_shortcut.xml
@@ -2,9 +2,12 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/tvHistory"
     android:ellipsize="start"
+    android:layout_marginBottom="0.5dp"
     android:textColor="@color/manhole_white"
     android:gravity="right|center_vertical"
     android:padding="5dp"
     android:alpha="0.5"
+    android:textSize="10sp"
     android:layout_width="match_parent"
-    android:layout_height="30dp" />
+    android:layout_height="wrap_content"
+    android:singleLine="true" />
