--- a/app_moxy/src/main/res/layout/activity_main.xml
+++ b/app_moxy/src/main/res/layout/activity_main.xml
@@ -74,4 +74,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
+    <Button
+        android:id="@+id/btnJump"
+        android:text="jump"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
 </LinearLayout>
