feat: 复制请求响应

--- a/manhole/src/main/res/layout/layout_history_header.xml
+++ b/manhole/src/main/res/layout/layout_history_header.xml
@@ -98,6 +98,7 @@
         app:layout_constraintTop_toBottomOf="@id/tvRequestBodyStart" />
 
     <TextView
+        android:id="@+id/tvResponseBodyStart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
