--- a/manhole/src/main/res/layout/item_case.xml
+++ b/manhole/src/main/res/layout/item_case.xml
@@ -12,7 +12,7 @@
 
         <TextView
             android:layout_weight="1"
-            android:id="@+id/tvName"
+            android:id="@+id/manhole_tvName"
             android:textSize="16sp"
             android:text="ageageagge"
             android:textColor="@color/manhole_pure_black"
@@ -20,14 +20,14 @@
             android:layout_height="wrap_content"/>
 
         <Switch
-            android:id="@+id/switchCase"
+            android:id="@+id/manhole_switchCase"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
     </LinearLayout>
 
     <TextView
-        android:id="@+id/tvTitle"
+        android:id="@+id/manhole_tvTitle"
         android:layout_marginTop="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -37,7 +37,7 @@
 
     <TextView
         android:layout_marginTop="5dp"
-        android:id="@+id/tvDesc"
+        android:id="@+id/manhole_tvDesc"
         android:textColor="@color/manhole_99"
         android:textSize="12sp"
         android:maxLines="3"
