--- a/manhole/src/main/res/layout/item_enable_choice.xml
+++ b/manhole/src/main/res/layout/item_enable_choice.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="16dp">
 
     <TextView
-        android:id="@+id/tvMockName"
+        android:id="@+id/manhole_tvMockName"
         android:text="hoghaohgeo"
         android:textSize="18sp"
         android:textColor="@color/manhole_black"
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"/>
 
     <TextView
-        android:id="@+id/tvName"
+        android:id="@+id/manhole_tvName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="mock_gage_asgaega"
@@ -32,7 +32,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tvMethod"
+            android:id="@+id/manhole_tvMethod"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:background="@drawable/manhole_left_circle_get"
@@ -44,7 +44,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/tvPath"
+            android:id="@+id/manhole_tvPath"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:background="@drawable/manhole_right_circle_stroke_get"
@@ -61,14 +61,14 @@
             android:layout_height="wrap_content"/>
 
         <Switch
-            android:id="@+id/switchMock"
+            android:id="@+id/manhole_switchMock"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
     </LinearLayout>
 
     <TextView
-        android:id="@+id/tvTitle"
+        android:id="@+id/manhole_tvTitle"
         android:layout_marginTop="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -77,7 +77,7 @@
         android:textSize="13sp" />
     <TextView
         android:layout_marginTop="5dp"
-        android:id="@+id/tvDesc"
+        android:id="@+id/manhole_tvDesc"
         android:textColor="@color/manhole_99"
         android:textSize="12sp"
         android:maxLines="3"
