--- a/manhole/src/main/res/layout/item_flow.xml
+++ b/manhole/src/main/res/layout/item_flow.xml
@@ -13,7 +13,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tvName"
+            android:id="@+id/manhole_tvName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -22,14 +22,14 @@
             android:textSize="22sp" />
 
         <Switch
-            android:id="@+id/switchFlow"
+            android:id="@+id/manhole_switchFlow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
     </LinearLayout>
 
     <TextView
-        android:id="@+id/tvTitle"
+        android:id="@+id/manhole_tvTitle"
         android:layout_marginTop="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -39,7 +39,7 @@
 
 
     <TextView
-        android:id="@+id/tvDesc"
+        android:id="@+id/manhole_tvDesc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
