--- a/manhole/src/main/res/layout/item_history_shortcut.xml
+++ b/manhole/src/main/res/layout/item_history_shortcut.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/tvHistory"
+    android:id="@+id/manhole_tvHistory"
     android:ellipsize="start"
     android:layout_marginBottom="0.5dp"
     android:textColor="@color/manhole_white"
