--- a/manhole/src/main/res/layout/item_mock.xml
+++ b/manhole/src/main/res/layout/item_mock.xml
@@ -9,7 +9,7 @@
     android:paddingBottom="8dp">
 
     <TextView
-        android:id="@+id/tvName"
+        android:id="@+id/manhole_tvName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="mock_gage_asgaega"
@@ -24,7 +24,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tvMethod"
+            android:id="@+id/manhole_tvMethod"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:background="@drawable/manhole_left_circle_get"
@@ -36,7 +36,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/tvPath"
+            android:id="@+id/manhole_tvPath"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:background="@drawable/manhole_right_circle_stroke_get"
@@ -53,7 +53,7 @@
             android:layout_weight="1" />
 
         <Switch
-            android:id="@+id/switchMock"
+            android:id="@+id/manhole_switchMock"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone" />
@@ -61,7 +61,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/tvTitle"
+        android:id="@+id/manhole_tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
@@ -70,7 +70,7 @@
         android:textSize="13sp" />
 
     <TextView
-        android:id="@+id/tvDesc"
+        android:id="@+id/manhole_tvDesc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
