--- a/manhole/src/main/res/layout/item_mock_choice.xml
+++ b/manhole/src/main/res/layout/item_mock_choice.xml
@@ -13,7 +13,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tvName"
+            android:id="@+id/manhole_tvName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="mock_gage_asgaega"
@@ -26,14 +26,14 @@
             android:layout_height="wrap_content"/>
 
         <Switch
-            android:id="@+id/switchMock"
+            android:id="@+id/manhole_switchMock"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
     </LinearLayout>
 
     <TextView
-        android:id="@+id/tvTitle"
+        android:id="@+id/manhole_tvTitle"
         android:layout_marginTop="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -42,7 +42,7 @@
         android:textSize="13sp" />
     <TextView
         android:layout_marginTop="5dp"
-        android:id="@+id/tvDesc"
+        android:id="@+id/manhole_tvDesc"
         android:textColor="@color/manhole_99"
         android:textSize="12sp"
         android:maxLines="3"
