--- a/manhole/src/main/res/layout/layout_case.xml
+++ b/manhole/src/main/res/layout/layout_case.xml
@@ -13,7 +13,7 @@
         <TextView
             android:layout_marginLeft="16dp"
             android:layout_weight="1"
-            android:id="@+id/tvName"
+            android:id="@+id/manhole_tvName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="mock_gage_asgaega"
@@ -23,7 +23,7 @@
 
 
         <TextView
-            android:id="@+id/tvClose"
+            android:id="@+id/manhole_tvClose"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="16dp"
@@ -36,7 +36,7 @@
 
 
     <TextView
-        android:id="@+id/tvTitle"
+        android:id="@+id/manhole_tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
@@ -47,7 +47,7 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/tvDesc"
+        android:id="@+id/manhole_tvDesc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
@@ -59,7 +59,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvCase"
+        android:id="@+id/manhole_rvCase"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
