--- a/manhole/src/main/res/layout/layout_choice_detail.xml
+++ b/manhole/src/main/res/layout/layout_choice_detail.xml
@@ -7,7 +7,7 @@
     tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
 
     <com.freesith.jsonview.JsonView
-        android:id="@+id/v_response_json"
+        android:id="@+id/manhole_v_response_json"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tvClose"
+        android:id="@+id/manhole_tvClose"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="16dp"
