--- a/manhole/src/main/res/layout/layout_crash_detail.xml
+++ b/manhole/src/main/res/layout/layout_crash_detail.xml
@@ -6,7 +6,7 @@
     android:padding="15dp">
 
     <TextView
-        android:id="@+id/tvName"
+        android:id="@+id/manhole_tvName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="@color/manhole_black"
@@ -17,17 +17,17 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tvDesc"
+        android:id="@+id/manhole_tvDesc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:textColor="@color/manhole_black"
         android:textSize="14sp"
-        app:layout_constraintLeft_toLeftOf="@id/tvName"
-        app:layout_constraintTop_toBottomOf="@id/tvName" />
+        app:layout_constraintLeft_toLeftOf="@id/manhole_tvName"
+        app:layout_constraintTop_toBottomOf="@id/manhole_tvName" />
 
     <TextView
-        android:id="@+id/tvClose"
+        android:id="@+id/manhole_tvClose"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="16dp"
