--- a/manhole/src/main/res/layout/layout_mock.xml
+++ b/manhole/src/main/res/layout/layout_mock.xml
@@ -19,7 +19,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/tvName"
+                android:id="@+id/manhole_tvName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="mock_gage_asgaega"
@@ -35,7 +35,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/tvMethod"
+                    android:id="@+id/manhole_tvMethod"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:background="@drawable/manhole_left_circle_get"
@@ -47,7 +47,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/tvPath"
+                    android:id="@+id/manhole_tvPath"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:background="@drawable/manhole_right_circle_stroke_get"
@@ -68,7 +68,7 @@
 
 
         <TextView
-            android:id="@+id/tvClose"
+            android:id="@+id/manhole_tvClose"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="16dp"
@@ -81,7 +81,7 @@
 
 
     <TextView
-        android:id="@+id/tvTitle"
+        android:id="@+id/manhole_tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
@@ -93,7 +93,7 @@
 
     <TextView
         android:layout_marginLeft="16dp"
-        android:id="@+id/tvDesc"
+        android:id="@+id/manhole_tvDesc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
@@ -125,7 +125,7 @@
             android:text="host:" />
 
         <TextView
-            android:id="@+id/tvHost"
+            android:id="@+id/manhole_tvHost"
             android:textSize="15sp"
             android:textColor="@color/manhole_black"
             android:layout_width="match_parent"
@@ -140,7 +140,7 @@
         android:background="@color/manhole_99" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvChoice"
+        android:id="@+id/manhole_rvChoice"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
