--- a/manhole/src/main/res/layout/stub_setting.xml
+++ b/manhole/src/main/res/layout/stub_setting.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.freesith.manhole.ui.SettingView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/vSetting"
+    android:id="@+id/manhole_vSetting"
     android:visibility="gone"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
